--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,1 +1,193 @@
-/* No CSS */
+body {
+  margin: 0;
+  padding: 0;
+}
+
+h1 {
+  font-size: 20px;
+  font-weight: bold;
+  font-family: "Roboto", sans-serif;
+  text-align: center;
+}
+
+h2 {
+  font-size: 20px;
+  font-weight: bold;
+  font-family: "Roboto", sans-serif;
+}
+
+p {
+  font-size: 14px;
+  font-family: "Roboto", sans-serif;
+}
+
+a {
+  text-decoration: none;
+  font-size: 14px;
+  font-family: "Roboto", sans-serif;
+}
+
+header #logo_header {
+  padding: 15px;
+  text-align: center;
+}
+
+.main__container .form {
+  height: 50px;
+  background-color: #eaeaea;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background: #eaeaea;
+  background: -webkit-gradient(linear, left bottom, left top, color-stop(89%, #eaeaea), color-stop(100%, #909090), to(#eaeaea));
+  background: linear-gradient(0deg, #eaeaea 89%, #909090 100%, #eaeaea 100%);
+}
+
+.main__container .form form {
+  color: #353535;
+}
+
+.main__container .form form input {
+  background-color: #eaeaea;
+  padding-left: 15px;
+  border: none;
+  font-family: "Roboto", sans-serif;
+  font-weight: bold;
+  font-size: 15px;
+}
+
+.main__container .description {
+  background-color: #f6f6f6;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  text-align: center;
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+
+.main__container .description h1 {
+  padding: 0 80px;
+}
+
+.main__container .description p {
+  padding: 0 35px;
+  color: #353535;
+  margin-top: 20px;
+}
+
+.main__container .description .button {
+  background: #9356dc;
+  background: linear-gradient(357deg, #9356dc 5%, #ff79da 100%, #eaeaea 100%);
+  padding: 20px;
+  border-radius: 50px;
+  color: white;
+  margin-top: 35px;
+}
+
+.fonctionnement {
+  margin: 0px 20px;
+}
+
+.fonctionnement__description {
+  background-color: #f6f6f6;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 25px 0px;
+  padding: 10px;
+  border-radius: 50px;
+  -webkit-box-shadow: 5px 4px 17px -8px rgba(0, 0, 0, 0.77);
+          box-shadow: 5px 4px 17px -8px rgba(0, 0, 0, 0.77);
+}
+
+.fonctionnement__description .fas {
+  padding: 15px;
+  color: #7e7e7e;
+}
+
+.fonctionnement__description p {
+  font-weight: bold;
+}
+
+.fonctionnement__description .number {
+  color: white;
+  font-weight: normal;
+  margin-left: -125px;
+  height: 25px;
+  width: 25px;
+  background-color: #9356dc;
+  border-radius: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.fonctionnement__description--violet {
+  background-color: #f5edff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 25px 0px;
+  padding: 10px;
+  border-radius: 50px;
+  -webkit-box-shadow: 5px 4px 17px -8px rgba(0, 0, 0, 0.77);
+          box-shadow: 5px 4px 17px -8px rgba(0, 0, 0, 0.77);
+}
+
+.fonctionnement__description--violet .fas {
+  padding: 15px;
+  color: #9356dc;
+}
+
+.fonctionnement__description--violet p {
+  font-weight: bold;
+}
+
+.fonctionnement__description--violet .number {
+  color: white;
+  font-weight: normal;
+  margin-left: -125px;
+  height: 25px;
+  width: 25px;
+  background-color: #9356dc;
+  border-radius: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
