--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,6 +5,7 @@ $tertiary-color: #99e2d0;
 $font-title: "Shrikhand", cursive;
 $font-main: "Roboto", sans-serif;
 
+html,
 body {
 	margin: 0;
 	padding: 0;
@@ -23,6 +24,12 @@ h2 {
 	font-family: $font-main;
 }
 
+h3 {
+	font-size: 16px;
+	font-weight: bold;
+	font-family: $font-main;
+}
+
 p {
 	font-size: 14px;
 	font-family: $font-main;
@@ -32,6 +39,15 @@ a {
 	text-decoration: none;
 	font-size: 14px;
 	font-family: $font-main;
+	color: black;
+}
+
+li {
+	text-decoration: none;
+	font-size: 14px;
+	font-family: $font-main;
+	color: black;
+	list-style-type: none;
 }
 
 header {
@@ -102,6 +118,7 @@ header {
 				border-radius: 50px;
 				color: white;
 				margin-top: 35px;
+				box-shadow: 5px 4px 17px -8px rgba(0, 0, 0, 0.77);
 			}
 		}
 	}
@@ -172,6 +189,83 @@ header {
 				display: flex;
 				justify-content: center;
 				align-items: center;
+			}
+		}
+	}
+}
+
+#restaurants {
+	margin: 0 20px;
+
+	.restaurants {
+		a {
+			display: flex;
+			flex-direction: column;
+			border-radius: 20px;
+			box-shadow: 0 0 7px #c1c1c1;
+			margin: 20px 0px;
+
+			img {
+				object-fit: cover;
+				height: 175px;
+				border-radius: 20px 20px 0 0;
+			}
+		}
+
+		&__description {
+			display: flex;
+			justify-content: space-between;
+			height: 75px;
+
+			&__texte {
+				display: flex;
+				flex-direction: column;
+				margin: 5px 15px;
+				line-height: 0px;
+
+				p {
+					font-size: 16px;
+				}
+			}
+
+			.far {
+				display: flex;
+				justify-content: center;
+				align-items: center;
+				font-size: 25px;
+				padding: 25px;
+			}
+		}
+	}
+}
+
+footer {
+	background-color: rgb(53, 53, 53);
+	margin: 0;
+	padding: 0 0 20px 0;
+
+	#logo_footer {
+		padding: 15px 15px;
+
+		h3 {
+			color: white;
+			font-family: $font-title;
+			margin: 0;
+			font-size: 20px;
+		}
+	}
+
+	ul {
+		padding: 0px 15px;
+		margin: 0;
+		line-height: 25px;
+
+		a {
+			color: white;
+
+			.fas {
+				padding: 0px 10px 0 0;
+				font-size: 10px;
 			}
 		}
 	}
