--- a/public/css/index.css
+++ b/public/css/index.css
@@ -51,24 +51,15 @@ header #logo_header {
 .main__container .form {
   height: 50px;
   background-color: #eaeaea;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
   background: #eaeaea;
-  background: -webkit-gradient(linear, left bottom, left top, color-stop(89%, #eaeaea), color-stop(100%, #909090), to(#eaeaea));
   background: linear-gradient(0deg, #eaeaea 89%, #909090 100%, #eaeaea 100%);
 }
-
 .main__container .form form {
   color: #353535;
 }
-
 .main__container .form form input {
   background-color: #eaeaea;
   padding-left: 15px;
@@ -77,32 +68,23 @@ header #logo_header {
   font-weight: bold;
   font-size: 15px;
 }
-
 .main__container .description {
   background-color: #f6f6f6;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  flex-wrap: wrap;
+  justify-content: center;
   text-align: center;
   padding-top: 40px;
   padding-bottom: 40px;
 }
-
 .main__container .description h1 {
   padding: 0 80px;
 }
-
 .main__container .description p {
   padding: 0 35px;
   color: #353535;
   margin-top: 20px;
 }
-
 .main__container .description .button {
   background: #9356dc;
   background: linear-gradient(357deg, #9356dc 5%, #ff79da 100%, #eaeaea 100%);
@@ -110,41 +92,29 @@ header #logo_header {
   border-radius: 50px;
   color: white;
   margin-top: 35px;
-  -webkit-box-shadow: 5px 4px 17px -8px rgba(0, 0, 0, 0.77);
-          box-shadow: 5px 4px 17px -8px rgba(0, 0, 0, 0.77);
+  box-shadow: 5px 4px 17px -8px rgba(0, 0, 0, 0.77);
 }
 
 .fonctionnement {
   margin: 0px 20px;
 }
-
 .fonctionnement__description {
   background-color: #f6f6f6;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
   margin: 25px 0px;
   padding: 10px;
   border-radius: 50px;
-  -webkit-box-shadow: 5px 4px 17px -8px rgba(0, 0, 0, 0.77);
-          box-shadow: 5px 4px 17px -8px rgba(0, 0, 0, 0.77);
+  box-shadow: 5px 4px 17px -8px rgba(0, 0, 0, 0.77);
 }
-
 .fonctionnement__description .fas {
   padding: 15px;
   color: #7e7e7e;
 }
-
 .fonctionnement__description p {
   font-weight: bold;
 }
-
 .fonctionnement__description .number {
   color: white;
   font-weight: normal;
@@ -153,44 +123,27 @@ header #logo_header {
   width: 25px;
   background-color: #9356dc;
   border-radius: 50%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
 }
-
 .fonctionnement__description--violet {
   background-color: #f5edff;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
   margin: 25px 0px;
   padding: 10px;
   border-radius: 50px;
-  -webkit-box-shadow: 5px 4px 17px -8px rgba(0, 0, 0, 0.77);
-          box-shadow: 5px 4px 17px -8px rgba(0, 0, 0, 0.77);
+  box-shadow: 5px 4px 17px -8px rgba(0, 0, 0, 0.77);
 }
-
 .fonctionnement__description--violet .fas {
   padding: 15px;
   color: #9356dc;
 }
-
 .fonctionnement__description--violet p {
   font-weight: bold;
 }
-
 .fonctionnement__description--violet .number {
   color: white;
   font-weight: normal;
@@ -199,78 +152,44 @@ header #logo_header {
   width: 25px;
   background-color: #9356dc;
   border-radius: 50%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
 }
 
 #restaurants {
   margin: 0 20px;
 }
-
 #restaurants .restaurants a {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   border-radius: 20px;
-  -webkit-box-shadow: 0 0 7px #c1c1c1;
-          box-shadow: 0 0 7px #c1c1c1;
+  box-shadow: 0 0 7px #c1c1c1;
   margin: 20px 0px;
 }
-
 #restaurants .restaurants a img {
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   height: 175px;
   border-radius: 20px 20px 0 0;
 }
-
 #restaurants .restaurants__description {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
   height: 75px;
 }
-
 #restaurants .restaurants__description__texte {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   margin: 5px 15px;
   line-height: 0px;
 }
-
 #restaurants .restaurants__description__texte p {
   font-size: 16px;
 }
-
 #restaurants .restaurants__description .far {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
   font-size: 25px;
   padding: 25px;
 }
@@ -280,29 +199,26 @@ footer {
   margin: 0;
   padding: 0 0 20px 0;
 }
-
 footer #logo_footer {
   padding: 15px 15px;
 }
-
 footer #logo_footer h3 {
   color: white;
   font-family: "Shrikhand", cursive;
   margin: 0;
   font-size: 20px;
 }
-
 footer ul {
   padding: 0px 15px;
   margin: 0;
   line-height: 25px;
 }
-
 footer ul a {
   color: white;
 }
-
 footer ul a .fas {
   padding: 0px 10px 0 0;
   font-size: 10px;
 }
+
+/*# sourceMappingURL=index.css.map */
