--- a/sass/index.scss
+++ b/sass/index.scss
@@ -5,6 +5,18 @@ $tertiary-color: #99e2d0;
 $font-title: "Shrikhand", cursive;
 $font-main: "Roboto", sans-serif;
 
+@mixin tablet-only {
+	@media screen and (min-width: 381px) and (max-width: 1024px) {
+		@content;
+	}
+}
+
+@mixin pc-only {
+	@media screen and (min-width: 1025px) {
+		@content;
+	}
+}
+
 html,
 body {
 	margin: 0;
@@ -95,6 +107,9 @@ header {
 			text-align: center;
 			padding-top: 40px;
 			padding-bottom: 40px;
+			@include tablet-only {
+				flex-direction: column;
+			}
 
 			h1 {
 				padding: 0 80px;
@@ -119,6 +134,9 @@ header {
 				color: white;
 				margin-top: 35px;
 				box-shadow: 5px 4px 17px -8px rgba(0, 0, 0, 0.77);
+
+				@include tablet-only {
+				}
 			}
 		}
 	}
@@ -126,41 +144,19 @@ header {
 
 .fonctionnement {
 	margin: 0px 20px;
-
-	&__description {
-		background-color: #f6f6f6;
+	@include tablet-only {
 		display: flex;
-		justify-content: center;
-		align-items: center;
-		margin: 25px 0px;
-		padding: 10px;
-		border-radius: 50px;
-		box-shadow: 5px 4px 17px -8px rgba(0, 0, 0, 0.77);
+		flex-direction: column;
+	}
 
-		.fas {
-			padding: 15px;
-			color: rgb(126, 126, 126);
-		}
-
-		p {
-			font-weight: bold;
-		}
-
-		.number {
-			color: white;
-			font-weight: normal;
-			margin-left: -125px;
-			height: 25px;
-			width: 25px;
-			background-color: $primary-color;
-			border-radius: 50%;
+	&__container {
+		@include tablet-only {
 			display: flex;
-			justify-content: center;
-			align-items: center;
+			flex-wrap: wrap;
+			justify-content: space-around;
 		}
-
-		&--violet {
-			background-color: rgb(245, 237, 255);
+		&__description {
+			background-color: #f6f6f6;
 			display: flex;
 			justify-content: center;
 			align-items: center;
@@ -168,10 +164,13 @@ header {
 			padding: 10px;
 			border-radius: 50px;
 			box-shadow: 5px 4px 17px -8px rgba(0, 0, 0, 0.77);
+			@include tablet-only {
+				width: 35%;
+			}
 
 			.fas {
 				padding: 15px;
-				color: $primary-color;
+				color: rgb(126, 126, 126);
 			}
 
 			p {
@@ -189,6 +188,49 @@ header {
 				display: flex;
 				justify-content: center;
 				align-items: center;
+				@include tablet-only {
+					margin-left: -80px;
+				}
+			}
+
+			&--violet {
+				background-color: rgb(245, 237, 255);
+				display: flex;
+				justify-content: center;
+				align-items: center;
+				margin: 25px 0px;
+				padding: 10px;
+				border-radius: 50px;
+				box-shadow: 5px 4px 17px -8px rgba(0, 0, 0, 0.77);
+				@include tablet-only {
+					width: 35%;
+				}
+
+				.fas {
+					padding: 15px;
+					color: $primary-color;
+				}
+
+				p {
+					font-weight: bold;
+				}
+
+				.number {
+					color: white;
+					font-weight: normal;
+					margin-left: -125px;
+					height: 25px;
+					width: 25px;
+					background-color: $primary-color;
+					border-radius: 50%;
+					display: flex;
+					justify-content: center;
+					align-items: center;
+
+					@include tablet-only {
+						margin-left: -80px;
+					}
+				}
 			}
 		}
 	}
@@ -197,43 +239,55 @@ header {
 #restaurants {
 	margin: 0 20px;
 
-	.restaurants {
-		a {
-			display: flex;
-			flex-direction: column;
-			border-radius: 20px;
-			box-shadow: 0 0 7px #c1c1c1;
-			margin: 20px 0px;
-
-			img {
-				object-fit: cover;
-				height: 175px;
-				border-radius: 20px 20px 0 0;
+	.restaurants__container {
+		.restaurants {
+			@include tablet-only {
+				display: flex;
+				flex-wrap: wrap;
+				flex-direction: row;
+				justify-content: space-evenly;
 			}
-		}
-
-		&__description {
-			display: flex;
-			justify-content: space-between;
-			height: 75px;
-
-			&__texte {
+			a {
 				display: flex;
 				flex-direction: column;
-				margin: 5px 15px;
-				line-height: 0px;
+				border-radius: 20px;
+				box-shadow: 0 0 7px #c1c1c1;
+				margin: 20px 0px;
 
-				p {
-					font-size: 16px;
+				@include tablet-only {
+					width: 45%;
+				}
+
+				img {
+					object-fit: cover;
+					height: 175px;
+					border-radius: 20px 20px 0 0;
 				}
 			}
 
-			.far {
+			&__description {
 				display: flex;
-				justify-content: center;
-				align-items: center;
-				font-size: 25px;
-				padding: 25px;
+				justify-content: space-between;
+				height: 75px;
+
+				&__texte {
+					display: flex;
+					flex-direction: column;
+					margin: 5px 15px;
+					line-height: 0px;
+
+					p {
+						font-size: 16px;
+					}
+				}
+
+				.far {
+					display: flex;
+					justify-content: center;
+					align-items: center;
+					font-size: 25px;
+					padding: 25px;
+				}
 			}
 		}
 	}
