--- a/public/css/index.css
+++ b/public/css/index.css
@@ -70,16 +70,14 @@ header #logo_header {
 }
 .main__container .description {
   background-color: #f6f6f6;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
   text-align: center;
   padding-top: 40px;
   padding-bottom: 40px;
+  height: 300px;
 }
 @media screen and (min-width: 381px) {
   .main__container .description {
-    flex-direction: column;
+    height: 200px;
   }
 }
 .main__container .description h1 {
@@ -89,6 +87,7 @@ header #logo_header {
   padding: 0 35px;
   color: #353535;
   margin-top: 20px;
+  margin-bottom: 70px;
 }
 .main__container .description .button {
   background: #9356dc;
@@ -118,7 +117,6 @@ header #logo_header {
 .fonctionnement__container__description {
   background-color: #f6f6f6;
   display: flex;
-  justify-content: center;
   align-items: center;
   margin: 25px 0px;
   padding: 10px;
@@ -145,7 +143,7 @@ header #logo_header {
 .fonctionnement__container__description .number {
   color: white;
   font-weight: normal;
-  margin-left: -125px;
+  margin-left: -15px;
   height: 25px;
   width: 25px;
   background-color: #9356dc;
@@ -153,21 +151,6 @@ header #logo_header {
   display: flex;
   justify-content: center;
   align-items: center;
-}
-@media screen and (min-width: 381px) {
-  .fonctionnement__container__description .number {
-    margin-left: -80px;
-  }
-}
-@media screen and (min-width: 1024px) {
-  .fonctionnement__container__description .number {
-    margin-left: -60px;
-  }
-}
-@media screen and (min-width: 1440px) {
-  .fonctionnement__container__description .number {
-    margin-left: -170px;
-  }
 }
 .fonctionnement__container__description--violet {
   background-color: #f5edff;
