--- a/public/css/restaurant.css
+++ b/public/css/restaurant.css
@@ -1,3 +1,13 @@
+@keyframes menu_anim {
+  from {
+    transform: scaleY(0);
+    opacity: 0;
+  }
+  to {
+    transform: scaleY(1);
+    opacity: 1;
+  }
+}
 html,
 body {
   margin: 0;
@@ -58,7 +68,7 @@ header #logo_header {
   padding-top: 15px;
 }
 header .empty {
-  width: 30px;
+  width: 64px;
 }
 
 main img {
@@ -94,6 +104,10 @@ main .menu__container .title .underline {
   height: 3px;
   background-color: #99e2d0;
   margin-top: -5px;
+}
+main .menu__container .container_animation {
+  transform-origin: top;
+  animation: menu_anim 1000ms;
 }
 main .menu__container .block {
   background-color: white;
