--- a/sass/index.scss
+++ b/sass/index.scss
@@ -201,7 +201,6 @@ header {
 			&--violet {
 				background-color: rgb(245, 237, 255);
 				display: flex;
-				justify-content: center;
 				align-items: center;
 				margin: 25px 0px;
 				padding: 10px;
@@ -226,7 +225,7 @@ header {
 				.number {
 					color: white;
 					font-weight: normal;
-					margin-left: -125px;
+					margin-left: -15px;
 					height: 25px;
 					width: 25px;
 					background-color: $primary-color;
@@ -234,16 +233,6 @@ header {
 					display: flex;
 					justify-content: center;
 					align-items: center;
-
-					@include tablet-only {
-						margin-left: -80px;
-					}
-					@include pc1024-only {
-						margin-left: -60px;
-					}
-					@include pc1440-only {
-						margin-left: -170px;
-					}
 				}
 			}
 		}
@@ -261,7 +250,7 @@ header {
 				flex-direction: row;
 				justify-content: space-evenly;
 			}
-			a {
+			.restaurants__container2 {
 				display: flex;
 				flex-direction: column;
 				border-radius: 20px;
@@ -276,6 +265,7 @@ header {
 				img {
 					object-fit: cover;
 					height: 175px;
+					width: 100%;
 					border-radius: 20px 20px 0 0;
 				}
 
@@ -288,6 +278,45 @@ header {
 					padding: 8px 15px;
 					border-radius: 5px;
 				}
+				.heart {
+					display: flex;
+					justify-content: center;
+					align-items: center;
+					font-size: 25px;
+					padding: 25px;
+					position: relative;
+
+					.far {
+						position: absolute;
+						top: 25px;
+						right: 0;
+						bottom: 0;
+						left: 0px;
+						z-index: -1;
+					}
+					.fas {
+						color: $primary-color;
+						opacity: 0;
+						position: absolute;
+						top: 25px;
+						right: 0;
+						bottom: 0;
+						left: 0px;
+						z-index: 1;
+						&:active {
+							opacity: 1;
+							content: "";
+							position: absolute;
+							top: 25px;
+							right: 0;
+							bottom: 0;
+							left: 0px;
+							z-index: 1;
+							transition: opacity 250ms;
+							animation-fill-mode: forwards;
+						}
+					}
+				}
 			}
 
 			&__description {
@@ -299,19 +328,11 @@ header {
 					display: flex;
 					flex-direction: column;
 					margin: 5px 15px;
-					line-height: 0px;
+					line-height: 10px;
 
 					p {
 						font-size: 16px;
 					}
-				}
-
-				.far {
-					display: flex;
-					justify-content: center;
-					align-items: center;
-					font-size: 25px;
-					padding: 25px;
 				}
 			}
 		}
