--- a/sass/restaurant.scss
+++ b/sass/restaurant.scss
@@ -5,6 +5,17 @@ $tertiary-color: #99e2d0;
 $font-title: "Shrikhand", cursive;
 $font-main: "Roboto", sans-serif;
 
+@keyframes menu_anim {
+	from {
+		transform: scaleY(0);
+		opacity: 0;
+	}
+	to {
+		transform: scaleY(1);
+		opacity: 1;
+	}
+}
+
 @mixin tablet-only {
 	@media screen and (min-width: 381px) {
 		@content;
@@ -83,7 +94,7 @@ header {
 		padding-top: 15px;
 	}
 	.empty {
-		width: 30px;
+		width: 64px;
 	}
 }
 
@@ -123,6 +134,11 @@ main {
 					background-color: $tertiary-color;
 					margin-top: -5px;
 				}
+			}
+
+			.container_animation {
+				transform-origin: top;
+				animation: menu_anim 1000ms;
 			}
 			.block {
 				background-color: white;
