--- a/public/css/restaurant.css
+++ b/public/css/restaurant.css
@@ -13,6 +13,13 @@ body {
   margin: 0;
   padding: 0;
 }
+@media screen and (min-width: 1440px) {
+  html,
+body {
+    max-width: 1440px;
+    margin: auto;
+  }
+}
 
 h1 {
   font-size: 25px;
