--- a/public/css/restaurant.css
+++ b/public/css/restaurant.css
@@ -114,7 +114,15 @@ main .menu__container .title .underline {
 }
 main .menu__container .container_animation {
   transform-origin: top;
-  animation: menu_anim 1000ms;
+  animation: menu_anim 800ms ease-in-out;
+}
+main .menu__container .container_animation2 {
+  transform-origin: top;
+  animation: menu_anim 800ms 500ms ease-in-out;
+}
+main .menu__container .container_animation3 {
+  transform-origin: top;
+  animation: menu_anim 800ms 500ms ease-in-out;
 }
 main .menu__container .block {
   background-color: white;
