--- a/sass/restaurant.scss
+++ b/sass/restaurant.scss
@@ -7,11 +7,11 @@ $font-main: "Roboto", sans-serif;
 
 @keyframes menu_anim {
 	from {
-		transform: scaleY(0);
+		transform: translate(0, 20px);
 		opacity: 0;
 	}
 	to {
-		transform: scaleY(1);
+		transform: translate(0, 0);
 		opacity: 1;
 	}
 }
@@ -152,7 +152,7 @@ main {
 
 			.container_animation3 {
 				transform-origin: top;
-				animation: menu_anim 800ms 500ms ease-in-out;
+				animation: menu_anim 800ms 1000ms ease-in-out;
 			}
 			.block {
 				background-color: white;
