--- a/sass/restaurant.scss
+++ b/sass/restaurant.scss
@@ -148,11 +148,13 @@ main {
 			.container_animation2 {
 				transform-origin: top;
 				animation: menu_anim 800ms 500ms ease-in-out;
+				animation-fill-mode: both;
 			}
 
 			.container_animation3 {
 				transform-origin: top;
 				animation: menu_anim 800ms 1000ms ease-in-out;
+				animation-fill-mode: both;
 			}
 			.block {
 				background-color: white;
