--- a/sass/restaurant.scss
+++ b/sass/restaurant.scss
@@ -205,6 +205,18 @@ main {
 			border-radius: 50px;
 			box-shadow: 5px 4px 17px -8px rgba(0, 0, 0, 0.77);
 			text-align: center;
+
+			&:hover {
+				background: linear-gradient(
+					357deg,
+					lighten(rgba(147, 86, 220, 1), 5%) 5%,
+					lighten(rgba(255, 121, 218, 1), 5%) 100%,
+					lighten(rgba(234, 234, 234, 1), 5%) 100%
+				);
+
+				box-shadow: 5px 4px 30px -8px #000000;
+			}
+
 			@include tablet-only {
 				width: 20%;
 				margin-left: 250px;
