--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,3 +1,36 @@
+@keyframes progress-bar {
+  0% {
+    transform: scaleX(0);
+    opacity: 1;
+  }
+  17% {
+    transform: scaleX(0.18);
+  }
+  24% {
+    transform: scaleX(0.4);
+  }
+  46% {
+    transform: scaleX(0.81);
+  }
+  85% {
+    opacity: 1;
+  }
+  100% {
+    transform: scaleX(1);
+    opacity: 0;
+  }
+}
+@keyframes progress-bar--bg {
+  0% {
+    opacity: 1;
+  }
+  85% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
 html,
 body {
   margin: 0;
@@ -48,6 +81,68 @@ li {
   font-family: "Roboto", sans-serif;
   color: black;
   list-style-type: none;
+}
+
+.loader {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 75%;
+  position: fixed;
+  top: 25%;
+  left: 13%;
+  z-index: 2;
+}
+@media screen and (min-width: 381px) {
+  .loader {
+    left: 30%;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .loader {
+    left: 37.5%;
+  }
+}
+.loader p {
+  width: 50%;
+  opacity: 0;
+  text-align: center;
+  font-family: "Shrikhand", cursive;
+  font-size: 20px;
+  padding: 20px;
+  color: white;
+  border-radius: 50px;
+  background: linear-gradient(357deg, #9356dc 5%, #ff79da 100%, #eaeaea 100%);
+  animation: progress-bar--bg 1500ms;
+  animation-fill-mode: backwards;
+}
+@media screen and (min-width: 381px) {
+  .loader {
+    width: 40%;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .loader {
+    width: 25%;
+  }
+}
+.loader .progress {
+  background: rgba(223, 223, 223, 0.602);
+  border-radius: 50px;
+  opacity: 0;
+  animation: progress-bar--bg 1500ms;
+  animation-fill-mode: backwards;
+  width: 100%;
+}
+.loader .progress__bar {
+  border-radius: 50px;
+  background: #9356dc;
+  padding: 20px;
+  opacity: 0;
+  animation: progress-bar 1500ms;
+  animation-fill-mode: backwards;
+  transform-origin: left;
 }
 
 header #logo_header {
