--- a/sass/restaurant.scss
+++ b/sass/restaurant.scss
@@ -1,348 +1,9 @@
-$primary-color: #9356dc;
-$secondary-color: #ff79da;
-$tertiary-color: #99e2d0;
-
-$font-title: "Shrikhand", cursive;
-$font-main: "Roboto", sans-serif;
-
-@keyframes menu_anim {
-	from {
-		transform: translate(0, 20px);
-		opacity: 0;
-	}
-	to {
-		transform: translate(0, 0);
-		opacity: 1;
-	}
-}
-
-@keyframes checkbox-rotation {
-	from {
-		transform: rotate(180deg);
-	}
-	to {
-		transform: rotate(0deg);
-	}
-}
-
-@keyframes checkbox-translation {
-	from {
-		transform: translate(70px);
-	}
-	to {
-		transform: translate(-70px);
-		margin-left: 0px;
-	}
-}
-
-@mixin tablet-only {
-	@media screen and (min-width: 381px) {
-		@content;
-	}
-}
-
-@mixin pc1024-only {
-	@media screen and (min-width: 1024px) {
-		@content;
-	}
-}
-
-@mixin pc1440-only {
-	@media screen and (min-width: 1440px) {
-		@content;
-	}
-}
-
-html,
-body {
-	margin: 0;
-	padding: 0;
-	@include pc1440-only {
-		max-width: 1440px;
-		margin: auto;
-	}
-}
-
-h1 {
-	font-size: 25px;
-	font-weight: bold;
-	font-family: $font-title;
-	text-align: center;
-}
-
-h2 {
-	font-size: 15px;
-	font-weight: bold;
-	font-family: $font-main;
-	text-transform: uppercase;
-	color: rgb(76, 76, 76);
-}
-
-h3 {
-	font-size: 15px;
-	font-weight: bold;
-	font-family: $font-main;
-	text-overflow: ellipsis;
-}
-
-p {
-	font-size: 14px;
-	font-family: $font-main;
-}
-
-a {
-	text-decoration: none;
-	font-size: 14px;
-	font-family: $font-main;
-	color: black;
-}
-
-li {
-	text-decoration: none;
-	font-size: 14px;
-	font-family: $font-main;
-	color: black;
-	list-style-type: none;
-}
-
-header {
-	display: flex;
-	justify-content: space-between;
-
-	a {
-		padding: 25px;
-		font-size: 17px;
-	}
-	#logo_header {
-		padding-top: 15px;
-	}
-	.empty {
-		width: 64px;
-	}
-}
-
-main {
-	img {
-		object-fit: cover;
-		height: 265px;
-		width: 100%;
-		@include tablet-only {
-			width: 100%;
-		}
-	}
-
-	.menu {
-		padding: 40px 30px;
-		border-radius: 40px 40px 0 0;
-		margin-top: -40px;
-		position: relative;
-		background-color: rgb(246, 246, 246);
-
-		.name {
-			display: flex;
-			justify-content: space-between;
-			h1 {
-				margin: 0;
-			}
-			.heart {
-				display: flex;
-				justify-content: center;
-				align-items: center;
-				font-size: 25px;
-				padding: 25px;
-				position: relative;
-
-				.far {
-					position: absolute;
-					top: 10px;
-					right: 0;
-					bottom: 0;
-					left: 10px;
-					z-index: 0;
-				}
-				.fas {
-					color: $primary-color;
-					opacity: 0;
-					position: absolute;
-					top: 10px;
-					right: 0;
-					bottom: 0;
-					left: 10px;
-					z-index: 1;
-					transition: opacity 250ms;
-					animation-fill-mode: forwards;
-					&:active {
-						opacity: 1;
-					}
-				}
-			}
-		}
-		&__container {
-			.title {
-				.underline {
-					width: 40px;
-					height: 3px;
-					background-color: $tertiary-color;
-					margin-top: -5px;
-				}
-			}
-
-			.container_animation {
-				transform-origin: top;
-				animation: menu_anim 800ms ease-in-out;
-			}
-
-			.container_animation2 {
-				transform-origin: top;
-				animation: menu_anim 800ms 500ms ease-in-out;
-				animation-fill-mode: both;
-			}
-
-			.container_animation3 {
-				transform-origin: top;
-				animation: menu_anim 800ms 1000ms ease-in-out;
-				animation-fill-mode: both;
-			}
-			.block {
-				background-color: white;
-				box-shadow: 0 0 7px #c1c1c1;
-				border-radius: 20px;
-				margin: 15px 0;
-				display: flex;
-				justify-content: space-between;
-				height: 70px;
-				overflow: hidden;
-
-				&:active .checkbox {
-					animation: checkbox-translation 800ms ease-in-out;
-					animation-fill-mode: forwards;
-				}
-				&:active .checkbox__icon {
-					animation: checkbox-rotation 1000ms ease-in-out;
-					animation-fill-mode: forwards;
-				}
-
-				&__menu_description {
-					margin: 0 10px;
-					h3 {
-						margin: 15px 0px 5px 5px;
-					}
-					p {
-						white-space: nowrap;
-						overflow: hidden;
-						width: 240px;
-						text-overflow: ellipsis;
-						margin: 0 0 5px 5px;
-						@include tablet-only {
-							width: 100%;
-						}
-					}
-				}
-
-				&__price {
-					margin: 35px 20px 0px 0;
-
-					p {
-						margin: 0;
-						font-weight: bold;
-					}
-				}
-
-				.checkbox {
-					background: $tertiary-color;
-
-					display: flex;
-					align-items: center;
-					justify-content: center;
-					padding: 30px;
-					margin-left: 7px;
-					@include tablet-only {
-						margin-right: -80px;
-					}
-
-					&__icon {
-						color: white;
-						font-size: 20px;
-						transform: rotate(180deg);
-					}
-				}
-			}
-		}
-		.button {
-			background: rgb(147, 86, 220);
-			background: linear-gradient(
-				357deg,
-				rgba(147, 86, 220, 1) 5%,
-				rgba(255, 121, 218, 1) 100%,
-				rgba(234, 234, 234, 1) 100%
-			);
-			padding: 20px 30px;
-			margin: 45px 70px 0 70px;
-			border-radius: 50px;
-			box-shadow: 5px 4px 17px -8px rgba(0, 0, 0, 0.77);
-			text-align: center;
-
-			&:hover {
-				background: linear-gradient(
-					357deg,
-					lighten(rgba(147, 86, 220, 1), 5%) 5%,
-					lighten(rgba(255, 121, 218, 1), 5%) 100%,
-					lighten(rgba(234, 234, 234, 1), 5%) 100%
-				);
-
-				box-shadow: 5px 4px 30px -8px #000000;
-			}
-
-			@include tablet-only {
-				width: 20%;
-				margin-left: 250px;
-			}
-
-			@include pc1024-only {
-				width: 20%;
-				margin-left: 350px;
-			}
-
-			@include pc1440-only {
-				width: 20%;
-				margin-left: 500px;
-			}
-
-			a {
-				padding: 0 20px;
-				color: white;
-			}
-		}
-	}
-}
-footer {
-	background-color: rgb(53, 53, 53);
-	margin: 0;
-	padding: 0 0 20px 0;
-
-	#logo_footer {
-		padding: 15px 15px;
-
-		h3 {
-			color: white;
-			font-family: $font-title;
-			margin: 0;
-			font-size: 20px;
-		}
-	}
-
-	ul {
-		padding: 0px 15px;
-		margin: 0;
-		line-height: 25px;
-
-		a {
-			color: white;
-
-			.fas {
-				padding: 0px 10px 0 0;
-				font-size: 10px;
-			}
-		}
-	}
-}
+@import "./utils/variables";
+@import "./utils/keyframesloader";
+@import "./utils/keyframespages";
+@import "./utils/mixin";
+@import "./base/basepages";
+@import "./layouts/loader";
+@import "./layouts/headerpages";
+@import "./pages/restaurant";
+@import "./layouts/footer";
